Added empty view in detail fragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,7 @@
     <string name="action_share">Share</string>
     <string name="action_add">Add currency</string>
 
+    <!--ExchangeDetail -->
+    <string name="exchange_empty">Please add two or more currencies</string>
+
 </resources>
